# cisterian-numbers

./: CMakeLists.txt  README.md
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.c  vertices.c  vertices.h
